--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
+    <link rel="shortcut icon" href="./images/logoIcon.webp">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="前端技術分享介紹"/>
+    <meta property="og:url" content="https://ayvc0420.github.io/webDesign/index.html"/>
+    <meta name="twitter:url" content="https://ayvc0420.github.io/webDesign/index.html"/>
     <title>前端技術分享介紹</title>
     <link rel="stylesheet" href="scss/reset.css">
     <link rel="stylesheet" href="scss/style.css">
@@ -84,7 +88,7 @@
                 <div>
                     <h3>版本控制</h3>
                     <p>身為一個有良好習慣的開發者一定要使用版本控制管理自己的專案，在這邊推薦使用Git搭配GitHub平台，</p>
-                    <p>在Windows環境下vs code預設終端機為powerShell，在vs code內使用ctrl+`快速鍵可以開啟終端機介面由於Windows平台沒有自帶Git控制系統(Linux、Mac系統則有)，必須從<a href="https://git-scm.com/" target="new">Git官網</a>下載套件安裝後才可以在終端機內使用。</p>
+                    <p>在Windows環境下vs code預設終端機為powerShell，在vs code內使用ctrl+`快速鍵可以開啟終端機介面由於Windows平台沒有自帶Git控制系統，必須從<a href="https://git-scm.com/" target="new">Git官網</a>下載套件安裝後才可以在終端機內使用。</p>
                 </div>
                 <div>
                     <img src="./images/git_github.webp" alt="git github" title="git跟github圖片">
@@ -94,7 +98,7 @@
                 <div>
                     <h3>瀏覽器</h3>
                     <p>好的開發者工具會帶你上天堂這句話不是沒有道理的，由於chrome市占率是最高的也支援不少API，在開發上主要依chrome的效果為主，如果你的主要開發瀏覽器不是chrome那我建議你現在就開始改用。</p>
-                    <p>在前端有各式各樣的環境存在，有必須支援IE的原因，也有考慮到使用者是使用safari或firefox等部份功能不支援的瀏覽器，在執行瀏覽上會產生了相容性問題，因此就算是你裝了chrome，在測試上仍然需要將其他瀏覽器一併納入。</p>
+                    <p>不過在開發專案時必須考慮各家瀏覽器的存在，有必須支援IE的原因，也有考慮到使用者是使用safari或firefox等部份功能不支援的瀏覽器在瀏覽網頁會產生了相容性問題，因此就算是你了主要使用chrome，在測試上仍然需要將其他瀏覽器一併納入。</p>
                 </div>
                 <div>
                     <img src="./images/browser.webp" alt="browser" title="瀏覽器圖片">
