--- a/vueExplain.html
+++ b/vueExplain.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
+    <link rel="shortcut icon" href="./images/vueLogo.webp">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Vue介紹"/>
+    <meta property="og:url" content="https://ayvc0420.github.io/webDesign/vueExplain.html"/>
+    <meta name="twitter:url" content="https://ayvc0420.github.io/webDesign/vueExplain.html"/>
     <title>Vue介紹</title>
     <link rel="stylesheet" href="scss/reset.css">
     <link rel="stylesheet" href="scss/style.css">
@@ -62,7 +66,7 @@
             <header class="header">
                 <h2>前言</h2>
                 <p>框架是什麼?為什麼要用它?</p>
-                <p>在大型資料網站中直接使用HTML、JS顯示畫面及控制功能等時會因為龐大的分支頁導致維護困難及成本直線上升，假如有一萬個頁面需要更改其中一個共通佈局點時有可能要將這一萬個頁面的資料一個一個更改，這是一個非常耗時間及做無意義事的成本，因此使用JavaScript框架可以有效解決這些問題。</p>
+                <p>在大型資料網站中直接使用HTML、JS顯示畫面及控制功能等時會因為龐大的分支頁導致維護困難及成本直線上升，例如有一萬個頁面需要更改其中一個共通佈局點時有可能要將這一萬個頁面的資料一個一個更改，這是一個非常耗時間及做無意義事的成本，因此使用JavaScript框架可以有效解決這些問題。</p>
                 <P>目前JavaScript三個主流框架分別為Angular、React、Vue，本篇只針對Vue進行介紹，由於Vue有學習曲線低、輕量型等優點只要對HTML、CSS、JS有基礎認知幾乎都能在短時間內對Vue上手，相較於其他兩個框架Vue的入門門檻非常的低。</P>
             </header>
 
@@ -199,7 +203,7 @@
                         </div>
                     </div>
                     <br>
-                    <p>以上是最常見的使用包含click監聽、show條件顯示、v-Model雙向綁定、{{}}單向顯示資料、for in迴圈，其中v-on:click的縮寫是@click<br>更多如v-bind、v-html等應用參考<a href="https://vuejs.org/v2/guide/syntax.html" target="new">官方文件</a></p>
+                    <p>以上是最常見的使用包含click監聽、show條件顯示、v-Model雙向綁定、{{}}單向顯示資料、keyup鍵盤操作事件、for in迴圈，其中v-on:click的縮寫是@click<br>更多如v-bind、v-html等應用參考<a href="https://vuejs.org/v2/guide/syntax.html" target="new">官方文件</a></p>
                 </ol>
             </div>
         </section>
