--- a/dockerExplain.html
+++ b/dockerExplain.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
+    <link rel="shortcut icon" href="./images/logoIcon.webp">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="title" content="Docker介紹"/>
+    <meta property="og:url" content="https://ayvc0420.github.io/webDesign/dockerExplain.html"/>
+    <meta name="twitter:url" content="https://ayvc0420.github.io/webDesign/dockerExplain.html"/>
+    <title>Docker介紹</title>
     <link rel="stylesheet" href="scss/reset.css">
     <link rel="stylesheet" href="scss/style.css">
 </head>
@@ -62,16 +66,16 @@
 
             <header class="header">
                 <h2>前言</h2>
-                <p>前端開發會因為環境影響造成功能不同，如團隊開發作業系統的差異提升開發困難，因此使用Docker可以有效處理這個問題，本篇僅介紹Docker並不含任何實作。</p>
+                <p>本篇僅介紹Docker並不含任何實作，原因為Docker並不是每個網頁開發必須會使用到的工具，在前端開發時經常會因為環境影響造成功能不同，如團隊開發作業系統的差異提升開發困難，因此使用Docker可以有效處理這個問題。</p>
             </header>
 
             <div class="code">
                 <h3>Docker是什麼?</h3>
-                <p>Docker是透過容器建立一個乾淨測試環境，與虛擬機相似但是執行所需的資源可以相差數十倍，Docker的資源使用率更高也更好管理，使用Docker前須先熟悉Linux常見指令。</p>
+                <p>使用Docker建立一個統一的開發測試環境稱為容器，與虛擬機相似但是執行所需的資源最大相差數十倍，Docker的資源使用率更高也更好管理，使用Docker前須先熟悉Linux常見指令。</p>
                 <h3>容器</h3>
-                <p>容器(container)是Docker將應用程式包裝起來的環境，容器由映像檔產生，在容器內執行一切操作皆不會影響本機環境，容器使用完畢後可以直接刪除實施用完即棄的概念</p>
+                <p>容器(container)是Docker建立的測試環境，容器由映像檔產生，在容器內執行一切操作皆不會影響本機環境，容器使用完畢後可以直接刪除實施用完即棄的概念</p>
                 <h3>映像檔</h3>
-                <p>映像檔(images)是Docker建立容器必備的檔案，一個映像檔內會含有執行所需要的工具如後端會含有node.js，映像檔實作可以參考<a href="https://ithelp.ithome.com.tw/articles/10205977?sc=pt" target="new">製作自己的映像檔</a>，一般而言前端並不會自製映像檔，這個映像檔可能是來自後端或倉庫拉下使用。</p>
+                <p>映像檔(images)是Docker建立容器必備的檔案，一個映像檔內會含有執行所需要的工具如後端會含有node.js，映像檔實作可以參考<a href="https://ithelp.ithome.com.tw/articles/10205977?sc=pt" target="new">製作自己的映像檔</a>，一般而言前端並不會自製映像檔，這個映像檔可能是來自後端或是其他倉庫拉下使用。</p>
                 <h3>倉庫</h3>
                 <p>用來存放映像檔的位置，包含私有與公開，與Git倉庫類似概念，可以pull他人的映像檔或自行製作上傳保存。</p>
 
