--- a/gitExplain.html
+++ b/gitExplain.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
+    <link rel="shortcut icon" href="./images/logoIcon.webp">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="title" content="Git介紹"/>
+    <meta property="og:url" content="https://ayvc0420.github.io/webDesign/gitExplain.html"/>
+    <meta name="twitter:url" content="https://ayvc0420.github.io/webDesign/gitExplain.html"/>
     <title>介紹Git</title>
     <link rel="stylesheet" href="scss/reset.css">
     <link rel="stylesheet" href="scss/style.css">
@@ -90,12 +94,24 @@
                     <li>需要額外花費時間學習Git的指令</li>
                     <li>雖然入門門檻低但需要精通Git的指令非常困難</li>
                 </ul>
-                <p class="mg_top10">Git分為工作區、暫存區、儲存區，平時開發時會在工作區執行，將檔案進行記錄點儲存時需要先將檔案放入暫存區(git add)，執行儲存時會將整個暫存區的檔案進行紀錄附上自訂訊息(git commit)。</p>
+                <h3>Git的流程</h3>
+                <p class="mg_top10">Git分為工作區、暫存區、儲存區，平時開發會在工作區執行，將檔案進行記錄點儲存時需要先將檔案放入暫存區(git add)，執行儲存時會將整個暫存區的檔案進行紀錄附上自訂訊息(git commit)，一般流程可以參考:</p>
+                <p class="mg_top10 mg_bottom10 flex wrap flex_center">
+                    開發告一段落或需要紀錄儲存點時將檔案加入追蹤(git add)
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
+                    </svg>
+                    針對已追蹤的檔案進行訊息紀錄(git commit)
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-down" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M8 1a.5.5 0 0 1 .5.5v11.793l3.146-3.147a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 .708-.708L7.5 13.293V1.5A.5.5 0 0 1 8 1z"/>
+                    </svg>
+                    將檔案推送至遠端倉庫保存(git push)，此選項不一定會使用
+                </p>
                 <h3>應該要如何使用Git</h3>
-                <p>Windows的環境下須至<a href="https://git-scm.com/" target="new">Git官網</a>安裝Git套件，Linux以及Mac系統已經內建在終端機下可以直接執行。</p>
-                <p>使用Git前必須先對資料夾建立Git配置，將資料夾用vs code開啟後在終端機執行<span class="mark">git init</span>指令即可讓Git對這個資料夾進行監控。</p>
-                <p>本篇不針對創建使用者資訊作介紹，詳細請參考<a href="https://w3c.hexschool.com/git/8a39ab5" target="new">六角-Git設定個人資訊</a>、<a href="https://medium.com/henrys-jottings/git-2-%E4%BD%BF%E7%94%A8%E8%80%85%E8%A8%AD%E5%AE%9A-%E5%88%9D%E6%9C%9F%E4%BD%BF%E7%94%A8-fcce01702be8" target="new">Git使用者設定教學</a> </p>
-                <p>以下內容使用環境為Windows平台vs code編輯器、Git GUI圖形介面工具Git Graph</p>
+                <p>使用Windows作業系統須至<a href="https://git-scm.com/" target="new">Git官網</a>安裝Git套件，Linux以及Mac系統已經內建Git套件在終端機可以直接輸入git相關指令安裝，或參考<a href="https://blog.davidou.org/archives/248" target="new">Git基礎使用介紹</a>。</p>
+                <p>使用Git前必須先對資料夾建立Git初始化，將資料夾用vs code開啟後在終端機執行<span class="mark">git init</span>指令即可讓Git對這個資料夾進行監控。</p>
+                <p>本篇不針對建立使用者資訊做介紹，詳細請參考<a href="https://w3c.hexschool.com/git/8a39ab5" target="new">六角-Git設定個人資訊</a>、<a href="https://medium.com/henrys-jottings/git-2-%E4%BD%BF%E7%94%A8%E8%80%85%E8%A8%AD%E5%AE%9A-%E5%88%9D%E6%9C%9F%E4%BD%BF%E7%94%A8-fcce01702be8" target="new">Git使用者設定教學</a> </p>
+                <p>以下內容使用環境為Windows平台vs code編輯器、Git GUI圖形介面工具Git Graph。</p>
                 <h3>Git常見指令</h3>
                 <ol>
                     <li>git init</li>
