--- a/layout.html
+++ b/layout.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-TW">
 <head>
+    <link rel="shortcut icon" href="./images/logoIcon.webp">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="title" content=""/>
+    <meta property="og:url" content=""/>
+    <meta name="twitter:url" content=""/> -->
+    <!-- title -->
     <title>Document</title>
     <link rel="stylesheet" href="scss/reset.css">
     <link rel="stylesheet" href="scss/style.css">
